<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".RegistroActivity">

        <TextView
            android:id="@+id/tv_registro_lb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/amiko"
            android:text="@string/registro_titulo_actividad"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/et_rounded"
            android:ems="10"
            android:fontFamily="@font/amiko"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textSize="24sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/et_rounded"
            android:ems="10"
            android:fontFamily="@font/amiko"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="24sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/et_rounded"
            android:ems="10"
            android:fontFamily="@font/amiko"
            android:hint="@string/telefono"
            android:inputType="number"
            android:textSize="24sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_clave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/et_rounded"
            android:ems="10"
            android:fontFamily="@font/amiko"
            android:hint="@string/clave"
            android:inputType="textPassword"
            android:textSize="24sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_claveAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/et_rounded"
            android:ems="10"
            android:fontFamily="@font/amiko"
            android:hint="@string/claveAgain"
            android:inputType="textPassword"
            android:textSize="24sp"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/tv_fechaNacimiento_lb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/amiko"
            android:text="@string/fecha_titulo"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_fechaNacimiento"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:background="@drawable/et_rounded"
                android:fontFamily="@font/amiko"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/fecha_nacimiento"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/ibtn_calendario"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/bt_calendar"
                android:scaleType="fitCenter"
                app:srcCompat="@android:drawable/ic_menu_my_calendar"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_lugarNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/amiko"
            android:text="@string/lugar_nacimiento_titulo"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/sp_lugarNacimiento"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/et_rounded"
            android:entries="@array/lista_ciudades" />

        <TextView
            android:id="@+id/tv_genero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/amiko"
            android:text="@string/sexo"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtn_masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:fontFamily="@font/amiko"
                android:text="@string/sexM"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rbtn_femenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/amiko"
                android:text="@string/sexF"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bt_rounded"
            android:fontFamily="@font/amiko"
            android:text="@string/guardar"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>